(lang dune 3.16)
(name qcow_info)
(generate_opam_files true)

(package
 (name qcow_info)
 (synopsis "Get information from a qcow file")
 (description "Get information from a qcow file")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
